--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
     "autoload": {
         "psr-4": {
             "Sergeykms\\HexletPhp\\": "src/"
-        }
+        },
+        "files": [
+            "src/Runner.php"
+        ]
     },
     "authors": [
         {
@@ -13,5 +16,14 @@
             "email": "serpp@me.com"
         }
     ],
-    "require": {}
+    "require": {
+        "tightenco/collect": "^9.52"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.7"
+    },
+    "scripts": {
+        "phpcs": "phpcs"
+    }
+
 }
